# cgbench

./: .gitignore  README.md  pyproject.toml
cgbench/: best_of_k.py  cspec_version_utils.py  explanation_judge.py  gci_utils.py  judge_utils.py  scoring_utils.py  util_agents.py  vci_utils.py
cgbench/prompts/: gci_experimental_evidence.py  vci_evidence_score.py  vci_evidence_suff.py
cgbench/prompts/judge/: __init__.py  gci.py  general.py  templates.py  vci_escore.py  vci_ever.py
clingen_gci/: run_evidence_extract.py  score.py
clingen_vci/: score_judge.py
clingen_vci/evidence_scoring/: judge.py  run_scorer.py  score.py
clingen_vci/evidence_sufficiency/: judge.py  run_scorer.py  score.py
