[project]
name = "clingen-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.43.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "beautifulsoup4==4.13.3",
    "biopython==1.85",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "decorator==5.1.1",
    "distro==1.9.0",
    "eval-type-backport==0.2.2",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fonttools==4.55.3",
    "frozenlist==1.5.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "ipdb==0.13.13",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.8",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-core==0.3.29",
    "langchain-text-splitters==0.3.5",
    "langsmith==0.2.10",
    "lxml==5.3.1",
    "markdown-it-py==3.0.0",
    "marshmallow==3.25.1",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "numpy==2.2.1",
    "openai==1.59.7",
    "orjson==3.10.14",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "pip==23.2.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.2.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "stack-data==0.6.3",
    "tabulate==0.9.0",
    "tenacity==9.0.0",
    "threadpoolctl==3.5.0",
    "tiktoken==0.9.0",
    "together==1.5.5",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "uv==0.5.20",
    "virtualenv-clone==0.5.7",
    "wcwidth==0.2.13",
    "yarl==1.18.3",
]
